# grade

./: pyproject.toml
grade/: __main__.py
grade/cli/: report.py  run.py
test/: test_main.py
