[tool.poetry]
name = "grade"
version = "2.1.1"
description = "a package focused on autograding"
authors = ["Tom <thoward12@outlook.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"

[tool.poetry.dev-dependencies]
Sphinx = "^2.4.1"
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
